@@ -37,7 +37,7 @@ If you think something does not work as expected, please [Open a new isssue](htt
 The basic usage is very very simple, you can use it just like the command `chroot`.
 - Secure:      
 It uses libcap and libseccomp for security, and most devices in /dev will never be reached in containers by default.
-- Static:      
+- Run Everywhere:      
 Build ruri with `make static`, it will be compiled as a small binary file(~1M), but it can be run anywhere without dependent libraries.      
 
 ### Install:      
@@ -46,8 +46,13 @@ git clone https://github.com/Moe-hacker/ruri
 cd ruri
 sudo make install
 ```
+#### make options:
+See `make help`.      
+
+### Usage:    
+See `ruri -h`
 ### Quick start(with rootfstool):
-#### First, download and unpack a rootfs:
+#### Download and unpack a rootfs:
 ```
 git clone https://github.com/Moe-hacker/rootfstool
 cd rootfstool
@@ -65,66 +70,7 @@ sudo ruri -D
 sudo ruri -u /tmp/alpine
 ```
 Very simple as you can see.    
-#### For command line examples, please see `ruri -H`
-#### make options:
-```text
-  make all            compile
-  make install        install ruri to $PREFIX
-  make static         static compile,with musl or glibc
-  make static-bionic  static compile,with bionic
-  make clean          clean
-Only for developers:
-  make dev            compile without optimizations, enable gdb debug information and extra logs.
-  make asan           enable ASAN
-  make check          run clang-tidy
-  make format         format code
-```
-#### Dependent libraries:
-For dynamic compilation:         
-- libcap       
-- libpthread
-- libseccomp
-     
-For static compilation:         
-- libcap-static
-- libc-static
-- libseccomp-static       
-### Usage:    
-```text
-Usage:
-  ruri OPTIONS
-  ruri [ARGS] CONTAINER_DIRECTORY [COMMAND [ARG]...]
-
-OPTIONS:
-  -v                     Show version info
-  -V                     Show version code
-  -h                     Show helps
-  -H                     Show helps and commandline examples
-  -D                     Run daemon
-  -K                     Kill daemon
-  -t                     Check if daemon is running
-  -T                     Check if daemon is running (No output)
-  -l                     List all running unshare containers
-  -U [container_dir]     Umount&kill a container
-
-ARGS:
-  -a [arch]              Simulate architecture via binfmt_misc & QEMU, need `-q`
-  -q [path]              Specify the path of QEMU
-  -u                     Enable unshare feature
-  -n                     Set NO_NEW_PRIVS Flag
-  -s                     Enable built-in Seccomp profile
-  -d                     Drop more capabilities for lower privilege
-  -p                     Run privileged container
-  -r                     Run rootless container
- --keep [cap]            Keep the specified cap
- --drop [cap]            Drop the specified cap
-  -e [env] [value]       Set env to its value *Not work if init command is like `su -`
-  -m [dir/dev/img] [dir] Mount dir/block-device/image to mountpoint
-  -S                     Bind-mount /dev/, /sys/ and /proc/ from host
-  -w                     Disable warnings
-```
-&emsp;This program should be run with root privileges.        
-&emsp;Please unset $LD_PRELOAD before running this program.              
+For command line examples, please see `ruri -H`.      
 ### About runtime dirs:
 ruri will create /dev/, /sys/ and /proc/ after chroot(2) into container for better security. You can use `-S` option to force it to bind-mount system runtime dirs.      
 ### About cross-arch container:
@@ -139,8 +85,6 @@ Adding CAP_SYS_ADMIN can not fix any problems, so just do not use this function.
 The seccomp rule of ruri is based on Docker's default seccomp profile. ruri does not provide the way to change it, but you can edit src/seccomp.c and replace setup_seccomp() with your own config.      
 ### About daemon:
 The daemon will create a socket file in $TMPDIR/ruri.sock (to be /tmp/ruri.sock on common GNU/Linux) for interprocess communication. This file will be automatically removed after running `ruri -K`.         
-### Full User Guide:
-See `ruri(1)` in manpage after installation.   
 ### License:
 License of code:      
 - Licensed under the MIT License      
@@ -148,14 +92,6 @@ License of code:
 
 License of clang-format config file:      
 - GPL-2.0      
-
-```
-●●●●  ●   ● ●●●●   ●●●
-●   ● ●   ● ●   ●   ● 
-●●●●  ●   ● ●●●●    ● 
-●  ●  ●   ● ●  ●    ● 
-●   ●  ●●●  ●   ●  ●●●
-```
 --------
 <p align="center">「 咲誇る花 美しく、</p>    
 <p align="center">散り行く運命 知りながら、</p>    
